--- a/packages/zod/package.json
+++ b/packages/zod/package.json
@@ -2,7 +2,7 @@
   "name": "@repo/zod",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "zod.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
