--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -4,7 +4,10 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev":"tsc -b && nodemon dist/server.js",
+    "build":"tsc -b",
+    "start":"npm run build && node dist/server.js"
   },
   "keywords": [],
   "author": "",
