--- a/package.json
+++ b/package.json
@@ -22,11 +22,14 @@
     "packages/*"
   ],
   "dependencies": {
+    "@prisma/client": "^6.16.2",
     "@types/bcrypt": "^6.0.0",
     "@types/express": "^5.0.3",
     "@types/jsonwebtoken": "^9.0.10",
     "bcrypt": "^6.0.0",
+    "cookie-parser": "^1.4.7",
     "express": "^5.1.0",
-    "jsonwebtoken": "^9.0.2"
+    "jsonwebtoken": "^9.0.2",
+    "prisma": "^6.16.2"
   }
 }
