--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -9,6 +9,11 @@
     "build":"tsc -b",
     "start":"npm run build && node dist/server.js"
   },
+  "dependencies": {
+    "@repo/db":"*",
+    "@repo/zod":"*",
+    "@repo/utils":"*"
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
