--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
     "prisma": "^6.16.2",
+    "redis": "^5.8.2",
     "zod": "^4.1.9"
   }
 }
