--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -2,12 +2,20 @@
   "name": "@repo/utils",
   "version": "1.0.0",
   "description": "",
-  "main": "index.ts",
+  "main": "token.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "type": "commonjs"
+  "type": "commonjs",
+  "dependencies": {
+    "bcrypt": "^6.0.0",
+    "jwt": "^0.2.0"
+  },
+  "devDependencies": {
+    "@types/bcrypt": "^6.0.0",
+    "@types/jsonwebtoken": "^9.0.10"
+  }
 }
