--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -2,7 +2,7 @@
   "name": "@repo/utils",
   "version": "1.0.0",
   "description": "",
-  "main": "token.ts",
+  "main": "dist/token.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
