--- a/apps/central-server/package.json
+++ b/apps/central-server/package.json
@@ -6,6 +6,11 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "dependencies": {
+    "@repo/db":"*",
+    "@repo/utils":"*",
+    "@repo/zod":"*"
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
