--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -15,7 +15,9 @@
     "@repo/zod": "*",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
-    "prisma": "^6.16.2"
+    "ioredis": "^5.8.0",
+    "prisma": "^6.16.2",
+    "resend": "^6.1.0"
   },
   "keywords": [],
   "author": "",
