--- a/apps/central-server/package.json
+++ b/apps/central-server/package.json
@@ -4,12 +4,18 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "tsc -b && nodemon dist/server.js",
+    "build": "tsc -b",
+    "start": "npm run build && node dist/server.js"
   },
   "dependencies": {
-    "@repo/db":"*",
-    "@repo/utils":"*",
-    "@repo/zod":"*"
+    "@repo/db": "*",
+    "@repo/redis": "*",
+    "@repo/utils": "*",
+    "@repo/zod": "*",
+    "ioredis": "^5.8.0",
+    "redis": "^5.8.2"
   },
   "keywords": [],
   "author": "",
