--- a/package.json
+++ b/package.json
@@ -23,16 +23,25 @@
   ],
   "dependencies": {
     "@prisma/client": "^6.16.2",
+    "@solana/spl-token": "^0.4.14",
+    "@solana/web3.js": "^1.98.4",
     "@types/bcrypt": "^6.0.0",
     "@types/express": "^5.0.3",
     "@types/jsonwebtoken": "^9.0.10",
     "bcrypt": "^6.0.0",
+    "bs58": "^6.0.0",
     "cookie-parser": "^1.4.7",
+    "dotenv": "^17.2.2",
     "express": "^5.1.0",
+    "ioredis": "^5.8.0",
     "jsonwebtoken": "^9.0.2",
+    "lucide-react": "^0.544.0",
+    "ml-random-forest": "^2.1.0",
     "nodemon": "^3.1.10",
     "prisma": "^6.16.2",
+    "razorpay": "^2.9.6",
     "redis": "^5.8.2",
+    "resend": "^6.1.0",
     "zod": "^4.1.9"
   }
 }
