--- a/package.json
+++ b/package.json
@@ -28,8 +28,10 @@
     "@types/bcrypt": "^6.0.0",
     "@types/express": "^5.0.3",
     "@types/jsonwebtoken": "^9.0.10",
+    "@types/multer": "^2.0.0",
     "bcrypt": "^6.0.0",
     "bs58": "^6.0.0",
+    "cloudinary": "^2.7.0",
     "cookie-parser": "^1.4.7",
     "dotenv": "^17.2.2",
     "express": "^5.1.0",
@@ -37,6 +39,7 @@
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.544.0",
     "ml-random-forest": "^2.1.0",
+    "multer": "^2.0.2",
     "nodemon": "^3.1.10",
     "prisma": "^6.16.2",
     "razorpay": "^2.9.6",
