--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
   },
   "packageManager": "bun@1.2.17",
   "workspaces": [
-    "apps/*",
+    "apps/api",
+    "apps/central-server",
     "packages/*"
   ],
   "dependencies": {
